(executables
 (names khires)
 (libraries js_of_ocaml-lwt)
 (modes byte)
 (preprocess
  (pps js_of_ocaml-ppx)))

(rule
 (targets khires.js)
 (action
  (run
   %{bin:js_of_ocaml}
   --source-map
   %{dep:khires.bc}
   -o
   %{targets}
   --pretty)))

(alias
 (name default)
 (deps khires.js index.html
 (glob_files sprites/*.{png,svg})))